--- a/docs/latex/classoriginal_1_1baseArray.tex
+++ b/docs/latex/classoriginal_1_1baseArray.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1baseArray}{}\label{classoriginal_1_1baseArray}\index{original::baseArray$<$ TYPE $>$@{original::baseArray$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::base\+Array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::base\+Array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
