--- a/docs/latex/classoriginal_1_1baseIterator.tex
+++ b/docs/latex/classoriginal_1_1baseIterator.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1baseIterator}{}\label{classoriginal_1_1baseIterator}\index{original::baseIterator$<$ TYPE $>$@{original::baseIterator$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::base\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::base\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::base\+Iterator\texorpdfstring{$<$}{<} TYPE \
 \end{figure}
 
 
-Collaboration diagram for original\+::base\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::base\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -44,7 +42,7 @@ virtual void {\bfseries operator+=} (int64\+\_\+t steps) const =0
 \item 
 virtual void {\bfseries operator-\/=} (int64\+\_\+t steps) const =0
 \item 
-int \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 virtual int64\+\_\+t {\bfseries operator-\/} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const =0
 \item 
