--- a/docs/latex/classoriginal_1_1comparable.tex
+++ b/docs/latex/classoriginal_1_1comparable.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1comparable}{}\label{classoriginal_1_1comparable}\index{original::comparable$<$ DERIVED $>$@{original::comparable$<$ DERIVED $>$}}
 
 
-Collaboration diagram for original\+::comparable\texorpdfstring{$<$}{<} DERIVED \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::comparable\texorpdfstring{$<$}{<} DERIVED \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -13,8 +12,8 @@ Collaboration diagram for original\+::comparable\texorpdfstring{$<$}{<} DERIVED 
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{classoriginal_1_1comparable_a1ec1f2c743f85c2791c31c4ffd42a3f7}\label{classoriginal_1_1comparable_a1ec1f2c743f85c2791c31c4ffd42a3f7} 
-virtual int {\bfseries compare\+To} (const DERIVED \&other) const =0
+\Hypertarget{classoriginal_1_1comparable_ab683f10d33ef5d307d717240af8a385c}\label{classoriginal_1_1comparable_ab683f10d33ef5d307d717240af8a385c} 
+virtual int64\+\_\+t {\bfseries compare\+To} (const DERIVED \&other) const =0
 \item 
 \Hypertarget{classoriginal_1_1comparable_a84244853f46e0ba1243e5707bfbf73bb}\label{classoriginal_1_1comparable_a84244853f46e0ba1243e5707bfbf73bb} 
 bool {\bfseries operator==} (const DERIVED \&other) const
