--- a/docs/latex/classoriginal_1_1iterationStream.tex
+++ b/docs/latex/classoriginal_1_1iterationStream.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1iterationStream}{}\label{classoriginal_1_1iterationStream}\index{original::iterationStream$<$ TYPE, DERIVED $>$@{original::iterationStream$<$ TYPE, DERIVED $>$}}
 
 
-Inheritance diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE, DERIVED \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE, DERIVED \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYP
 \end{figure}
 
 
-Collaboration diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE, DERIVED \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE, DERIVED \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -24,7 +22,7 @@ Collaboration diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} T
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{classoriginal_1_1iterationStream_a5a493fe65e59848653ff3035211a649a}\label{classoriginal_1_1iterationStream_a5a493fe65e59848653ff3035211a649a} 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
 \item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1iterationStream_ae85507f0211c0c1d8c10201636c24edb}{class\+Name}} () const override
 \item 
@@ -85,7 +83,7 @@ requires \mbox{\hyperlink{conceptoriginal_1_1Operation}{original\+::\+Operation}
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iteration\+Stream$<$ TYPE, DERIVED $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const DERIVED \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const DERIVED \&other) const=0
 \item 
 bool {\bfseries operator==} (const DERIVED \&other) const
 \item 
