--- a/docs/latex/classoriginal_1_1iterator.tex
+++ b/docs/latex/classoriginal_1_1iterator.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1iterator}{}\label{classoriginal_1_1iterator}\index{original::iterator$<$ TYPE $>$@{original::iterator$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::iterator\texorpdfstring{$<$}{<} TYPE \texorp
 \end{figure}
 
 
-Collaboration diagram for original\+::iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -47,7 +45,7 @@ virtual void {\bfseries operator+=} (int64\+\_\+t steps) const =0
 \Hypertarget{classoriginal_1_1iterator_a0c7c1d9fac42134367f926a364174598}\label{classoriginal_1_1iterator_a0c7c1d9fac42134367f926a364174598} 
 virtual void {\bfseries operator-\/=} (int64\+\_\+t steps) const =0
 \item 
-int \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 \Hypertarget{classoriginal_1_1iterator_a05bb6de3ffb335aeeeb7792466e95a62}\label{classoriginal_1_1iterator_a05bb6de3ffb335aeeeb7792466e95a62} 
 virtual int64\+\_\+t {\bfseries operator-\/} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const =0
