--- a/docs/latex/classoriginal_1_1vector.tex
+++ b/docs/latex/classoriginal_1_1vector.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1vector}{}\label{classoriginal_1_1vector}\index{original::vector$<$ TYPE $>$@{original::vector$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::vector\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::vector\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::vector\texorpdfstring{$<$}{<} TYPE \texorpdf
 \end{figure}
 
 
-Collaboration diagram for original\+::vector\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::vector\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -105,7 +103,7 @@ bool {\bfseries empty} () const
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1iterationStream}{original\+::iteration\+Stream$<$ TYPE, vector$<$ TYPE $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
 \item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1iterationStream_afdbf5c8276d763a8a7f8c620484b31a7}{to\+String}} (bool enter) const override
 \end{DoxyCompactItemize}
@@ -160,7 +158,7 @@ requires \mbox{\hyperlink{conceptoriginal_1_1Operation}{original\+::\+Operation}
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iteration\+Stream$<$ TYPE, vector$<$ TYPE $>$ $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1vector}{vector}}$<$ TYPE $>$ $>$ \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1vector}{vector}}$<$ TYPE $>$ $>$ \&other) const=0
 \item 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1vector}{vector}}$<$ TYPE $>$ $>$ \&other) const
 \item 
