--- a/docs/latex/comparable_8h_source.tex
+++ b/docs/latex/comparable_8h_source.tex
@@ -9,7 +9,7 @@
 \DoxyCodeLine{00005\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ DERIVED>}
 \DoxyCodeLine{00006\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{classoriginal_1_1comparable}{comparable}}\ \{}
 \DoxyCodeLine{00007\ \ \ \ \ \ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00008\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{int}\ compareTo(\textcolor{keyword}{const}\ DERIVED\ \&other)\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00008\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ int64\_t\ compareTo(\textcolor{keyword}{const}\ DERIVED\ \&other)\ \textcolor{keyword}{const}\ =\ 0;}
 \DoxyCodeLine{00009\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ operator==(\textcolor{keyword}{const}\ DERIVED\ \&other)\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00010\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ operator!=(\textcolor{keyword}{const}\ DERIVED\ \&other)\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00011\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ operator<(\textcolor{keyword}{const}\ DERIVED\ \&other)\ \textcolor{keyword}{const};}
