--- a/docs/latex/iterator_8h_source.tex
+++ b/docs/latex/iterator_8h_source.tex
@@ -24,7 +24,7 @@
 \DoxyCodeLine{00020\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ operator-\/-\/(\textcolor{keywordtype}{int})\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00021\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ operator+=(int64\_t\ steps)\ \textcolor{keyword}{const}\ =\ 0;}
 \DoxyCodeLine{00022\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ operator-\/=(int64\_t\ steps)\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00023\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ compareTo(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}\ \&other)\ \textcolor{keyword}{const\ override};}
+\DoxyCodeLine{00023\ \ \ \ \ \ \ \ \ \ \ \ \ int64\_t\ compareTo(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}\ \&other)\ \textcolor{keyword}{const\ override};}
 \DoxyCodeLine{00024\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ int64\_t\ operator-\/(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}\&\ other)\ \textcolor{keyword}{const}\ =\ 0;}
 \DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}*\ clone()\ \textcolor{keyword}{const\ override}\ =\ 0;}
 \DoxyCodeLine{00026\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{explicit}\ \textcolor{keyword}{operator}\ bool()\ \textcolor{keyword}{const};}
@@ -100,7 +100,7 @@
 \DoxyCodeLine{00096\ \ \ \ \ \}}
 \DoxyCodeLine{00097\ }
 \DoxyCodeLine{00098\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE>}
-\DoxyCodeLine{00099\ \ \ \ \ \textcolor{keyword}{auto}\ original::iterator<TYPE>::compareTo(\textcolor{keyword}{const}\ iterator\ \&other)\ \textcolor{keyword}{const}\ -\/>\ \textcolor{keywordtype}{int}\ \{}
+\DoxyCodeLine{00099\ \ \ \ \ \textcolor{keyword}{auto}\ original::iterator<TYPE>::compareTo(\textcolor{keyword}{const}\ iterator\ \&other)\ \textcolor{keyword}{const}\ -\/>\ int64\_t\ \{}
 \DoxyCodeLine{00100\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>operator-\/(other);}
 \DoxyCodeLine{00101\ \ \ \ \ \}}
 \DoxyCodeLine{00102\ }
