--- a/docs/latex/classoriginal_1_1bitSet.tex
+++ b/docs/latex/classoriginal_1_1bitSet.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1bitSet}{}\label{classoriginal_1_1bitSet}\index{original::bitSet@{original::bitSet}}
 
 
-Inheritance diagram for original\+::bit\+Set\+:
-\nopagebreak
+Inheritance diagram for original\+::bit\+Set\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::bit\+Set\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::bit\+Set\+:
-\nopagebreak
+Collaboration diagram for original\+::bit\+Set\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -99,7 +97,7 @@ bool {\bfseries empty} () const
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1iterationStream}{original\+::iteration\+Stream$<$ bool, bit\+Set $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
 \item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1iterationStream_ae85507f0211c0c1d8c10201636c24edb}{class\+Name}} () const override
 \item 
@@ -156,7 +154,7 @@ auto {\bfseries for\+Each} (const Callback \&operation) const -\/$>$ void
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iteration\+Stream$<$ bool, bit\+Set $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ bool, \mbox{\hyperlink{classoriginal_1_1bitSet}{bit\+Set}} $>$ \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ bool, \mbox{\hyperlink{classoriginal_1_1bitSet}{bit\+Set}} $>$ \&other) const=0
 \item 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ bool, \mbox{\hyperlink{classoriginal_1_1bitSet}{bit\+Set}} $>$ \&other) const
 \item 
