--- a/docs/latex/classoriginal_1_1bitSet_1_1Iterator.tex
+++ b/docs/latex/classoriginal_1_1bitSet_1_1Iterator.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1bitSet_1_1Iterator}{}\label{classoriginal_1_1bitSet_1_1Iterator}\index{original::bitSet::Iterator@{original::bitSet::Iterator}}
 
 
-Inheritance diagram for original\+::bit\+Set\+::Iterator\+:
-\nopagebreak
+Inheritance diagram for original\+::bit\+Set\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::bit\+Set\+::Iterator\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::bit\+Set\+::Iterator\+:
-\nopagebreak
+Collaboration diagram for original\+::bit\+Set\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -72,7 +70,7 @@ void {\bfseries operator-\/-\/} () const
 \item 
 void {\bfseries operator-\/-\/} (int) const
 \item 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 {\bfseries operator bool} () const
 \item 
@@ -110,7 +108,7 @@ const char \texorpdfstring{$\ast$}{*} {\bfseries to\+CString} (bool enter) const
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iterator$<$ bool $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ bool $>$ \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ bool $>$ \&other) const=0
 \item 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ bool $>$ \&other) const
 \item 
