--- a/docs/latex/classoriginal_1_1blocksList_1_1Iterator.tex
+++ b/docs/latex/classoriginal_1_1blocksList_1_1Iterator.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1blocksList_1_1Iterator}{}\label{classoriginal_1_1blocksList_1_1Iterator}\index{original::blocksList$<$ TYPE $>$::Iterator@{original::blocksList$<$ TYPE $>$::Iterator}}
 
 
-Inheritance diagram for original\+::blocks\+List\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::Iterator\+:
-\nopagebreak
+Inheritance diagram for original\+::blocks\+List\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::blocks\+List\texorpdfstring{$<$}{<} TYPE \te
 \end{figure}
 
 
-Collaboration diagram for original\+::blocks\+List\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::Iterator\+:
-\nopagebreak
+Collaboration diagram for original\+::blocks\+List\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -78,7 +76,7 @@ void {\bfseries operator-\/-\/} () const
 \item 
 void {\bfseries operator-\/-\/} (int) const
 \item 
-int \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 {\bfseries operator bool} () const
 \item 
