--- a/docs/latex/classoriginal_1_1chain.tex
+++ b/docs/latex/classoriginal_1_1chain.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1chain}{}\label{classoriginal_1_1chain}\index{original::chain$<$ TYPE $>$@{original::chain$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::chain\texorpdfstring{$<$}{<} TYPE \texorpdfs
 \end{figure}
 
 
-Collaboration diagram for original\+::chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -105,7 +103,7 @@ bool {\bfseries empty} () const
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1iterationStream}{original\+::iteration\+Stream$<$ TYPE, chain$<$ TYPE $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
 \item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1iterationStream_ae85507f0211c0c1d8c10201636c24edb}{class\+Name}} () const override
 \item 
@@ -162,7 +160,7 @@ requires \mbox{\hyperlink{conceptoriginal_1_1Operation}{original\+::\+Operation}
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iteration\+Stream$<$ TYPE, chain$<$ TYPE $>$ $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1chain}{chain}}$<$ TYPE $>$ $>$ \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1chain}{chain}}$<$ TYPE $>$ $>$ \&other) const=0
 \item 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1chain}{chain}}$<$ TYPE $>$ $>$ \&other) const
 \item 
