--- a/docs/latex/classoriginal_1_1forwardChain.tex
+++ b/docs/latex/classoriginal_1_1forwardChain.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1forwardChain}{}\label{classoriginal_1_1forwardChain}\index{original::forwardChain$<$ TYPE $>$@{original::forwardChain$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::forward\+Chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::forward\+Chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::forward\+Chain\texorpdfstring{$<$}{<} TYPE \
 \end{figure}
 
 
-Collaboration diagram for original\+::forward\+Chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::forward\+Chain\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -102,7 +100,7 @@ bool {\bfseries empty} () const
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1iterationStream}{original\+::iteration\+Stream$<$ TYPE, forward\+Chain$<$ TYPE $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
+int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}} \&other) const override
 \item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1iterationStream_ae85507f0211c0c1d8c10201636c24edb}{class\+Name}} () const override
 \item 
@@ -159,7 +157,7 @@ requires \mbox{\hyperlink{conceptoriginal_1_1Operation}{original\+::\+Operation}
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1comparable}{original\+::comparable$<$ iteration\+Stream$<$ TYPE, forward\+Chain$<$ TYPE $>$ $>$ $>$}}}
 \begin{DoxyCompactItemize}
 \item 
-virtual int {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1forwardChain}{forward\+Chain}}$<$ TYPE $>$ $>$ \&other) const=0
+virtual int64\+\_\+t {\bfseries compare\+To} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1forwardChain}{forward\+Chain}}$<$ TYPE $>$ $>$ \&other) const=0
 \item 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1iterationStream}{iteration\+Stream}}$<$ TYPE, \mbox{\hyperlink{classoriginal_1_1forwardChain}{forward\+Chain}}$<$ TYPE $>$ $>$ \&other) const
 \item 
