--- a/docs/latex/classoriginal_1_1iterable_1_1iterAdaptor.tex
+++ b/docs/latex/classoriginal_1_1iterable_1_1iterAdaptor.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1iterable_1_1iterAdaptor}{}\label{classoriginal_1_1iterable_1_1iterAdaptor}\index{original::iterable$<$ TYPE $>$::iterAdaptor@{original::iterable$<$ TYPE $>$::iterAdaptor}}
 
 
-Inheritance diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::iter\+Adaptor\+:
-\nopagebreak
+Inheritance diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::iter\+Adaptor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorp
 \end{figure}
 
 
-Collaboration diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::iter\+Adaptor\+:
-\nopagebreak
+Collaboration diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+::iter\+Adaptor\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -77,7 +75,7 @@ void {\bfseries operator-\/-\/} () const
 \item 
 void {\bfseries operator-\/-\/} (int) const
 \item 
-int \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 {\bfseries operator bool} () const
 \item 
