--- a/docs/latex/classoriginal_1_1randomAccessIterator.tex
+++ b/docs/latex/classoriginal_1_1randomAccessIterator.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1randomAccessIterator}{}\label{classoriginal_1_1randomAccessIterator}\index{original::randomAccessIterator$<$ TYPE $>$@{original::randomAccessIterator$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::random\+Access\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::random\+Access\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::random\+Access\+Iterator\texorpdfstring{$<$}
 \end{figure}
 
 
-Collaboration diagram for original\+::random\+Access\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::random\+Access\+Iterator\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -78,7 +76,7 @@ void {\bfseries operator-\/-\/} () const
 \item 
 void {\bfseries operator-\/-\/} (int) const
 \item 
-int \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
+int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1iterator_a95604290841a1dbe6c15dfb1f15a67a7}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}} \&other) const override
 \item 
 {\bfseries operator bool} () const
 \item 
