--- a/docs/latex/iterationStream_8h_source.tex
+++ b/docs/latex/iterationStream_8h_source.tex
@@ -17,7 +17,7 @@
 \DoxyCodeLine{00013\ \ \ \ \ \textcolor{keyword}{protected}:}
 \DoxyCodeLine{00014\ \ \ \ \ \ \ \ \ [[nodiscard]]\ std::string\ elementsString()\ \textcolor{keyword}{const};}
 \DoxyCodeLine{00015\ \ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00016\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ compareTo(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterationStream}{iterationStream}}\&\ other)\ \textcolor{keyword}{const\ override};}
+\DoxyCodeLine{00016\ \ \ \ \ \ \ \ \ int64\_t\ compareTo(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterationStream}{iterationStream}}\ \&other)\ \textcolor{keyword}{const\ override};}
 \DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ [[nodiscard]]\ std::string\ className()\ \textcolor{keyword}{const\ override};}
 \DoxyCodeLine{00018\ \ \ \ \ \ \ \ \ [[nodiscard]]\ std::string\ toString(\textcolor{keywordtype}{bool}\ enter)\ \textcolor{keyword}{const\ override};}
 \DoxyCodeLine{00019\ \ \ \ \ \};}
@@ -41,7 +41,7 @@
 \DoxyCodeLine{00037\ \ \ \ \ \}}
 \DoxyCodeLine{00038\ }
 \DoxyCodeLine{00039\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED>}
-\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{auto}\ original::iterationStream<TYPE,\ DERIVED>::compareTo(\textcolor{keyword}{const}\ iterationStream\ \&other)\ \textcolor{keyword}{const}\ -\/>\ \textcolor{keywordtype}{int}\ \{}
+\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{auto}\ original::iterationStream<TYPE,\ DERIVED>::compareTo(\textcolor{keyword}{const}\ iterationStream\ \&other)\ \textcolor{keyword}{const}\ -\/>\ int64\_t\ \{}
 \DoxyCodeLine{00041\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keyword}{auto}\ this\_it\ =\ this-\/>begin();}
 \DoxyCodeLine{00042\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keyword}{auto}\ other\_it\ =\ other.begin();}
 \DoxyCodeLine{00043\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (;this\_it.isValid()\ \&\&\ other\_it.isValid();\ ++this\_it,\ ++other\_it)\ \{}
