--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -355,6 +355,7 @@
 \input{types_8h_source}
 \input{vector_8h_source}
 \input{wrapper_8h_source}
+\input{original_8cpp}
 \input{original_8h_source}
 %--- End generated contents ---
 % Index
