--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,6 +1,6 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{src/\mbox{\hyperlink{original_8cpp}{original.\+cpp}} \\*Original 库主文件 }{\pageref{original_8cpp}}{}
+\item\contentsline{section}{src/\mbox{\hyperlink{original_8cpp}{original.\+cpp}} \\*Original Library main file }{\pageref{original_8cpp}}{}
 \item\contentsline{section}{src/\mbox{\hyperlink{original_8h_source}{original.\+h}} }{\pageref{original_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{algorithms_8h_source}{algorithms.\+h}} }{\pageref{algorithms_8h_source}}{}
 \item\contentsline{section}{src/core/\mbox{\hyperlink{array_8h_source}{array.\+h}} }{\pageref{array_8h_source}}{}
