--- a/docs/latex/original_8cpp.tex
+++ b/docs/latex/original_8cpp.tex
@@ -2,7 +2,7 @@
 \hypertarget{original_8cpp}{}\label{original_8cpp}\index{src/original.cpp@{src/original.cpp}}
 
 
-Original 库主文件  
+Original Library main file.  
 
 
 {\ttfamily \#include "{}original.\+h"{}}\newline
@@ -17,7 +17,7 @@ Include dependency graph for original.\+cpp\+:
 
 
 \doxysubsection{Detailed Description}
-Original 库主文件 
+Original Library main file. 
 
 Original 是一个用于学习和实践的 C++ 库开发项目，目的是实现 STL 风格的模板类容器、算法以及相关工具。 该库具有以下特点：
 \begin{DoxyItemize}
@@ -41,10 +41,10 @@ Git\+Hub 地址：https\+://github.com/\+Frozen\+Lemon\+Tee/original
 
 如需帮助，请参考项目文档或通过 Git\+Hub 提交 issue。
 \end{DoxyNote}
-\begin{DoxyParagraph}{项目名称}
+\begin{DoxyParagraph}{Project name}
 Original
 \end{DoxyParagraph}
-\begin{DoxyParagraph}{项目简介}
+\begin{DoxyParagraph}{Project description}
 Original is a C++ library development project for learning and practice, aimed at implementing STL-\/style template class containers, algorithms, and related tools. This library has the following characteristics\+:
 \begin{DoxyItemize}
 \item Provide multiple container implementations, including vector, chain, array, etc., supporting iterator operations.
@@ -53,13 +53,13 @@ Original is a C++ library development project for learning and practice, aimed a
 \item Support unit testing to ensure the correctness and robustness of the code.
 \end{DoxyItemize}
 \end{DoxyParagraph}
-\begin{DoxyParagraph}{项目作者}
+\begin{DoxyParagraph}{author}
 Frozen\+Lemon\+Tee
 \end{DoxyParagraph}
-\begin{DoxyParagraph}{Git\+Hub 地址}
+\begin{DoxyParagraph}{Git\+Hub website}
 \href{https://github.com/FrozenLemonTee/original}{\texttt{ https\+://github.\+com/\+Frozen\+Lemon\+Tee/original}}
 \end{DoxyParagraph}
-\begin{DoxyParagraph}{日期}
+\begin{DoxyParagraph}{date}
 October 2024
 \end{DoxyParagraph}
 \begin{DoxyNote}{Note}
