--- a/docs/latex/original_8cpp.tex
+++ b/docs/latex/original_8cpp.tex
@@ -6,8 +6,7 @@ Original Library main file.
 
 
 {\ttfamily \#include "{}original.\+h"{}}\newline
-Include dependency graph for original.\+cpp\+:
-\nopagebreak
+Include dependency graph for original.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
