--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -232,6 +232,7 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{index}
 \chapter{Concept Index}
 \input{concepts}
 \chapter{Hierarchical Index}
