--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -3,7 +3,11 @@
 \label{index_md_docs_2index}%
 \Hypertarget{index_md_docs_2index}%
 \hypertarget{index_autotoc_md1}{}\doxysection{\texorpdfstring{简介}{简介}}\label{index_autotoc_md1}
-Original是一个\+C++基础工具库,也是本人的第一个正式项目，用于学习\+C++相关基础以及\+STL、\+Boost等库。项目的目标是实现\+STL的主要内容以及\+Boost的某些相关功能，具体已经实现和未来计划实现的模块内容在下文列出，计划实现的部分会根据情况进行调整，不一定都实现，以最终项目为准。如有问题可以在\href{https://github.com/FrozenLemonTee/original/issues}{\texttt{ Issues}}中提出，也欢迎一起参与到本项目的实现中来，如\+Fork等。\hypertarget{index_autotoc_md2}{}\doxysection{\texorpdfstring{安装}{安装}}\label{index_autotoc_md2}
+Original是一个\+C++基础工具库,也是本人的第一个正式项目，用于学习\+C++相关基础以及\+STL、\+Boost等库。项目的目标是实现\+STL的主要内容以及\+Boost的某些相关功能，具体已经实现和未来计划实现的模块内容在下文列出，计划实现的部分会根据情况进行调整，不一定都实现，以最终项目为准。
+
+\href{https://github.com/FrozenLemonTee/original}{\texttt{ Github地址}}
+
+如有问题可以在\href{https://github.com/FrozenLemonTee/original/issues}{\texttt{ Issues}}中提出，也欢迎一起参与到本项目的实现中来，如\+Fork等。\hypertarget{index_autotoc_md2}{}\doxysection{\texorpdfstring{安装}{安装}}\label{index_autotoc_md2}
 这里以项目{\ttfamily hello\+\_\+original}为例： 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{├─CMakeLists.txt}
